Do not perform per-character font fallback for PUA codepoints

The analysis of a recent HarfBuzz performance regression showed that on
Linux fontconfig may return obscure system fonts that have coverage in
the Unicode private use area. Returning these has undefined semantics
and is not what we want. This lookup may occur when icon fonts with PUA
coverage are used as web fonts and have not been loaded yet. If we do
not perform character fallback in these cases, the last resort font will
be used instead.

This speeds up timeToFirstPaint on pages which use PUA area icon fonts
and where system fonts are installed which have coverage in this area -
for example, it affects our browse:news:cnn, browse:news:hackernews and
browse:social:twitter benchmark stories.

Bug: 795225
Change-Id: Id5f87157aa7077cca8e1c0dc894bb76d2dd132c3
Reviewed-on: https://chromium-review.googlesource.com/829378
Commit-Queue: Dominik Röttsches <drott@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525673}
Former-commit-id: 725d3699e90b2ad35a7b9d139b890a55457d9a80