third_party/WebKit/Source/platform/fonts/FontCache.h
@@ -107,8 +107,6 @@ class PLATFORM_EXPORT FontCache {
 
   void ReleaseFontData(const SimpleFontData*);
 
-  // This method is implemented by the plaform and used by
-  // FontFastPath to lookup the font for a given character.
   scoped_refptr<SimpleFontData> FallbackFontForCharacter(
       const FontDescription&,
       UChar32,
@@ -239,6 +237,12 @@ class PLATFORM_EXPORT FontCache {
   ~FontCache() {}
 
  private:
+  scoped_refptr<SimpleFontData> PlatformFallbackFontForCharacter(
+      const FontDescription&,
+      UChar32,
+      const SimpleFontData* font_data_to_substitute,
+      FontFallbackPriority = FontFallbackPriority::kText);
+
   friend class FontGlobalContext;
   FontCache();
 
