third_party/WebKit/Source/platform/fonts/fuchsia/FontCacheFuchsia.cpp
@@ -45,7 +45,7 @@ void FontCache::GetFontForCharacter(
   NOTIMPLEMENTED();
 }
 
-scoped_refptr<SimpleFontData> FontCache::FallbackFontForCharacter(
+scoped_refptr<SimpleFontData> FontCache::PlatformFallbackFontForCharacter(
     const FontDescription&,
     UChar32,
     const SimpleFontData* font_data_to_substitute,
